objects/AIA_Benefits__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Applies_Default__c</fullName>
        <label>INN Discount Applies Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Applies__c</fullName>
        <label>INN Discount Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Applies_customized__c</fullName>
        <formula>Text(Discount_Applies__c )!=  text(Discount_Applies_Default__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Discount Applies customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dummy_Parent_Benefit_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dummy Parent Benefit Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Benefit_Name__c</fullName>
        <formula>CASE( TEXT(Benefit_Type__c) , 'Mandate',(  IF(NOT( ISBLANK(Copay_Type_1_Mandate_Name__c )), Copay_Type_1_Mandate_Name__c, Benefit_Name__c ) + ' - '+ Text(Copay_Type_1_Jurisdiction__c) + ' - Mandate' ), 'Limitation', (Benefit_Name__c +' - Limitation'),Benefit_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Benefit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouper__c</fullName>
        <label>Grouper</label>
        <referenceTo>AIA_Grouper__c</referenceTo>
        <relationshipLabel>Benefit</relationshipLabel>
        <relationshipName>Benefit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>INN_AA_Drawloop__c</fullName>
        <description>This field is used in Drawloop US152</description>
        <formula>/*IF(TEXT(Copay_Type_1_IsCovered__c)='Yes',IF(Allowed_Amount__c!='','$'+Allowed_Amount__c,''),'')*/

IF(TEXT(Copay_Type_1_IsCovered__c)='Yes',IF((Allowed_Amount__c!=''&amp;&amp; Allowed_Amount__c!='NA' &amp;&amp;  NOT(ISBLANK(Allowed_Amount__c)) ),'$'+Allowed_Amount__c,''),'')</formula>
        <label>INN AA Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Coinsurance_Drawloop__c</fullName>
        <formula>IF(Text(Copay_Type_1_IsCovered__c) = 'Yes',CoInsurance_AmountValueSelected__c+' %','')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Coinsurance Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Copay_Drawloop__c</fullName>
        <description>This field is used in Drawloop US152</description>
        <formula>IF(TEXT(Copay_Type_1_IsCovered__c)='Yes',IF((Copay_Type_1_AmountValueSelected__c=''||Copay_Type_1_AmountValueSelected__c='NA'),'','$'+Copay_Type_1_AmountValueSelected__c),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Copay Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_DA_Drawloop__c</fullName>
        <formula>IF(TEXT(Copay_Type_1_IsCovered__c)='Yes',IF(Discount_Amount__c !='','Discount Amt:$'+Discount_Amount__c,'Discount Amt:N/A'),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN DA Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Deductible_Drawloop__c</fullName>
        <formula>IF(Text(Copay_Type_1_IsCovered__c) = 'Yes',Text(Copay_Type_1_DeductibleApplies__c),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Deductible Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Discount_Applies_Drawloop__c</fullName>
        <formula>IF(TEXT(Copay_Type_1_IsCovered__c)='Yes',IF( Text(Discount_Applies__c) !='','Discount Applies:'+Text(Discount_Applies__c),'Discount Applies:N/A'),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Discount Applies Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Discount_Percent_Drawloop__c</fullName>
        <formula>IF(TEXT(Copay_Type_1_IsCovered__c)='Yes',IF(Discount_Amount_Percent__c !='','Discount(%):'+Discount_Amount_Percent__c+'%','Discount(%):N/A'),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Discount Percent Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_MandateLockDownInd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN MandateLockDownInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_MappingBRFBenefitID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN MappingBRFBenefitID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_SA_Drawloop__c</fullName>
        <description>This field is used in Drawloop US152</description>
        <formula>IF(TEXT(Copay_Type_1_IsCovered__c)='Yes',IN_Approximate_Member_Payment_w_Discount__c,'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN SA Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_3Month_DedCarryover_Customized__c</fullName>
        <formula>text(IN_CostShare_3Month_DedCarryover_Default__c) !=  text(IN_CostShare_3Month_DeductibleCarryover__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IN 3Month DedCarryover Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IN_Approx_Member_Payment_w_Disc_Default__c</fullName>
        <description>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</inlineHelpText>
        <label>IN Approx-Member-Payment-w/Disc Default</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Approximate_Member_Payment_w_Discount__c</fullName>
        <description>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</inlineHelpText>
        <label>IN Approximate Member Payment-w/Discount</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_CostShare_3Month_DedCarryover_Default__c</fullName>
        <inlineHelpText>INN CostShare 3Month DedCarryover Default</inlineHelpText>
        <label>IN CostShare 3Month DedCarryover Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IN_CostShare_3Month_DeductibleCarryover__c</fullName>
        <description>In Network</description>
        <inlineHelpText>INN CostShare 3Month DedCarryover Default</inlineHelpText>
        <label>IN CostShare 3Month DeductibleCarryover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IS_ASO_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS_ASO_Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InNetwork_ExtID_Copay1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>InNetwork ExtID Copay1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InNetwork_ExtID_Copay2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>InNetwork ExtID Copay2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InNetwork_Id__c</fullName>
        <formula>Grouper__r.InNetwork__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InNetwork Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAppGlobalCoinsurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAppGlobalCoinsurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAppGlobalCopay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAppGlobalCopay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEvenRow__c</fullName>
        <formula>if( MOD(  Sequence_Number_SF__c ,2)=0 ,'true','false')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsEvenRow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRelatedCostShareCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used for checking whether the Drug cost share fields copied over from related medical product should be disabled or not</description>
        <label>IsRelatedCostShareCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limitation_MandateCommentCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Limitation/MandateCommentCode</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Limitation_MandateMaxRowValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Limitation/MandateMaxRowValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandate_Yes_No__c</fullName>
        <label>Mandate Yes/No</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxPayment_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN MaxPayment High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxPayment_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN MaxPayment Increment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxPayment_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN MaxPayment Low</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinPayment_Hiigh__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN MinPayment High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinPayment_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN MinPayment Increment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinPayment_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN MinPayment Low</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLimitationModified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <formula>Grouper__r.Network__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewBenefitValue__c</fullName>
        <formula>IF( TEXT(Grouper__r.Group_Type__c) =='Cost Share Group',
 Cost_Share_SelectedAmount__c +'_'+ OON_Cost_Share_SelectedAmount__c ,
CASE( Grouper__r.Proposed_Products__r.Product_Category__c ,
 'Medical',  (TEXT(Copay_Type_1_IsCovered__c)+'_'+ CoInsurance_AmountValueSelected__c+'_'+ TEXT( Copay_Type_1_DeductibleApplies__c)+ '_'+Copay_Type_1_AmountValueSelected__c+ '_'+Copay_Type_2_AmountValueSelected__c +'_'+(TEXT( OON_Copay_Type_1_IsCovered__c )+ '_'+ OON_CoInsurance_AmountValueSelected__c +'_'+TEXT(  OON_Copay_Type_1_DeductibleApplies__c )+ '_'+ OON_Copay_Type_1_AmountValueSelected__c +  '_'+OON_Copay_Type_2_AmountValueSelected__c )),
'Drug', (TEXT(Copay_Type_1_IsCovered__c)+ '_'+Copay_Type_1_AmountValueSelected__c+ '_'+CoInsurance_AmountValueSelected__c+  '_'+   Copay_Min_Payment__c +  '_'+  Copay_Max_Payment__c+ '_'+ (TEXT( Tier_type__c )+'_'  +(TEXT( OON_Copay_Type_1_IsCovered__c )+  '_'+OON_Copay_Type_1_AmountValueSelected__c +  '_'+  OON_CoInsurance_AmountValueSelected__c + '_'+ OON_Copay_Min_Payment__c +  '_'+   OON_Copay_Max_Payment__c+ '_'+(TEXT( OON_Tier_Type__c ) ) ))),
'' )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewBenefitValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ONN_MandateLockDownInd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ONN MandateLockDownInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ONN_MappingBRFBenefitID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ONN MappingBRFBenefitID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_Approx_Member_Payment_w_Disc_Default__c</fullName>
        <description>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</inlineHelpText>
        <label>ON Approx-Member-Payment-w/Disc Default</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_Approximate_Member_Payment_w_Discount__c</fullName>
        <description>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Scheduled Amount renamed to Approximate Member Payment-w/Discount and changed to 13 character text field</inlineHelpText>
        <label>ON Approximate Member Payment-w/Discount</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_CostShare_3Month_DeductibleCarryover__c</fullName>
        <description>out of network</description>
        <label>ON CostShare 3Month DeductibleCarryover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OONDefaultPlanBenefitNetValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Default PlanBenefit NetValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OON_3Month_DedCarryover_Customized__c</fullName>
        <formula>Text(ON_CostShare_3Month_DeductibleCarryover__c ) !=  text(OON_CostShare_3MonthDedCarryover_Default__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON 3Month DedCarryover Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_AA_Drawloop__c</fullName>
        <formula>IF(TEXT(OON_Copay_Type_1_IsCovered__c)='Yes',IF(OON_Allowed_Amount__c!='','$'+OON_Allowed_Amount__c,''),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON AA Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Allowed_Amount_Customized__c</fullName>
        <formula>OON_Allowed_Amount__c &lt;&gt; OON_Allowed_Amount_Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Allowed Amount Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Allowed_Amount_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Allowed Amount Default</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Allowed_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>OON Allowed Amount</inlineHelpText>
        <label>OON Plan Pays</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_AnnualMaximumApplies__c</fullName>
        <label>OON Annual Maximum Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_CoInsurance_AmountValueSelected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>OON - CoInsurance - AmountValueSelected</inlineHelpText>
        <label>OON CoInsurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Coinsurance_AddtionalIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance AddtionalIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Coinsurance_AmountHigh__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance AmountHigh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Coinsurance_AmountIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance Amount Increment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Coinsurance_AmountLow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance AmountLow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Coinsurance_Customized__c</fullName>
        <formula>if( OON_CoInsurance_AmountValueSelected__c!= OON_Coinsurance_DefaultAmount__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Coinsurance Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Coinsurance_DefaultAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance Default Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Coinsurance_Drawloop__c</fullName>
        <formula>IF(TEXT(OON_Copay_Type_1_IsCovered__c)='Yes',IF(OON_CoInsurance_AmountValueSelected__c!='','$'+OON_CoInsurance_AmountValueSelected__c,''),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Coinsurance Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Coinsurance_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance Invalid Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay2Additional_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay2 Additional InvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay2_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay2 High</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay2_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay2 Increment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay2_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay2 Low</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_1_Default_DeductibleApplies__c</fullName>
        <label>OON Copay 1 Default Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Copay_Additional_Increments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay1 Additional Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Additional_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay1 Additional Invalid Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_AmountHigh__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay1 AmountHigh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_AmountIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay1 Amount Increment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_AmountLow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay1 AmountLow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Default_Max_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay Default Max Payment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Default_Min_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay Default Min Payment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Drawloop__c</fullName>
        <formula>IF(TEXT(OON_Copay_Type_1_IsCovered__c)='Yes',IF(OON_Copay_Type_1_AmountValueSelected__c!='','$'+OON_Copay_Type_1_AmountValueSelected__c,''),'')</formula>
        <label>OON Copay Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Max_Payment_Customized__c</fullName>
        <formula>OON_Copay_Default_Max_Payment__c !=  OON_Copay_Max_Payment__c</formula>
        <label>OON Copay Max Payment Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Max_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay Max Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Min_Payment_Customized__c</fullName>
        <formula>OON_Copay_Default_Min_Payment__c  !=  OON_Copay_Min_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Copay Min Payment Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Min_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay Min Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 1 AliasName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_AmountValueSelected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>OON Copay1 AmountValueSelected</inlineHelpText>
        <label>OON Copay 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_Amount_Customized__c</fullName>
        <formula>if(OON_Copay_Type_1_DefaultAmount__c!= null &amp;&amp; OON_Copay_Type_1_AmountValueSelected__c!= OON_Copay_Type_1_DefaultAmount__c, true, false)</formula>
        <label>OON Copay Type 1 Amount Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_Benefit_Comment_Cod__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 1 Benefit Comment Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_DeductibleApplies__c</fullName>
        <inlineHelpText>OON - Copay Type 1 - DeductibleApplies</inlineHelpText>
        <label>OON Copay Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_Deductible_Customized__c</fullName>
        <formula>if(text(OON_Copay_1_Default_DeductibleApplies__c)!= null &amp;&amp; text(OON_Copay_Type_1_DeductibleApplies__c)!= text(OON_Copay_1_Default_DeductibleApplies__c), true, false)</formula>
        <label>OON Copay Type 1 - Deductible Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_DefaultAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 1 DefaultAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_Default_IsCovered__c</fullName>
        <label>OON Copay 1 Default IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_Individual_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OON Copay 1 Individual Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_IsCovered_Customized__c</fullName>
        <formula>if(Text(OON_Copay_Type_1_Default_IsCovered__c)!= null &amp;&amp; text(OON_Copay_Type_1_IsCovered__c)!= text(OON_Copay_Type_1_Default_IsCovered__c), true, false)</formula>
        <label>OON Copay 1 IsCovered Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_IsCovered__c</fullName>
        <inlineHelpText>OON - Copay Type 1 - IsCovered</inlineHelpText>
        <label>OON Copay IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_Is_ASO_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OON Copay 1 Is ASO Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 1 Jurisdiction</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_1_Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 1 Mandate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_Additional_Increments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 2 Additional Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 2 Alias Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_AmountValueSelected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>OON Copay Type 2 AmountValueSelected</inlineHelpText>
        <label>OON Copay 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_Benefit_Comment_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 2 Benefit Comment Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_Customized__c</fullName>
        <formula>if(OON_Copay_Type_2_DefaultAmount__c!= null &amp;&amp; OON_Copay_Type_2_AmountValueSelected__c!= OON_Copay_Type_2_DefaultAmount__c, true, false)</formula>
        <label>OON - Copay Type 2 - Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_DeductibleApplies__c</fullName>
        <label>OON Copay 2 Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_DefaultAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 2 Default Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_Individual_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OON Copay 2 Individual Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_IsCovered__c</fullName>
        <label>OON Copay 2 IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 2 Jurisdiction</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Copay_Type_2_Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Copay 2 Mandate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_CostShare_3MonthDedCarryover_Default__c</fullName>
        <label>OON CostShare 3MonthDedCarryover Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Cost_Share_AdditionalIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Cost Share AdditionalIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>